--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,11 +2,9 @@ version: "3.9"
 
 services:
   webapp:
-    build: ./
+    image: gio8tisu/flask-helloworld:latest
     command: gunicorn hello
     environment:
       PORT: 80
-    expose:
-      - 80
     ports:
       - 8080:80
